--- a/package.json
+++ b/package.json
@@ -1,41 +1,36 @@
 {
-  "name": "@hannal/editorjs-video-plugin",
-  "version": "0.0.2",
-  "description": "Video block tool for Editor.js supporting YouTube and Vimeo embeds with customizable options",
-  "main": "dist/video-plugin.umd.js",
-  "module": "dist/video-plugin.js",
-  "types": "src/index.d.ts",
-  "type": "module",
+  "name": "@hannal/editorjs-imagebox-plugin",
+  "version": "1.0.0",
+  "description": "Imagebox for Editor.js",
+  "main": "dist/imagebox.cjs.js",
+  "module": "dist/imagebox.esm.js",
+  "browser": "dist/imagebox.umd.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "build": "vite build",
-    "dev": "vite build --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc && webpack --mode production"
   },
   "keywords": [
-    "editor.js",
     "editorjs",
-    "video",
-    "youtube",
-    "vimeo",
-    "embed"
+    "imagebox",
+    "tool"
   ],
-  "author": "Hannal <kay@hannal.net>",
-  "license": "MIT",
-  "peerDependencies": {
-    "@hannal/editorjs": "^2.0.0"
-  },
+  "files": [
+    "dist",
+    "src/parser.css"
+  ],
   "devDependencies": {
-    "vite": "^5.4.14"
+    "@babel/core": "^7.23.0",
+    "@babel/preset-env": "^7.22.20",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.8.1",
+    "style-loader": "^3.3.3",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "typescript": "^5.0.0",
+    "ts-loader": "^9.4.0",
+    "@types/editorjs__editorjs": "^2.0.0"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/hannal/editorjs-video-plugin.git"
-  },
-  "bugs": {
-    "url": "https://github.com/hannal/editorjs-video-plugin/issues"
-  },
-  "homepage": "https://github.com/hannal/editorjs-video-plugin#readme",
-  "publishConfig": {
-    "access": "public"
+  "peerDependencies": {
+    "@editorjs/editorjs": "^2.0.0"
   }
 }
